--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.5"
   },
   "devDependencies": {
