--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DATABASE_URL_HEROINFO = 'mongodb://localhost/superheroes_info'
-DATABASE_URL_POWERS = 'mongodb://localhost/superhero_powers'
+DATABASE_URL_HEROINFO = 'mongodb://localhost/heroes_info'
+DATABASE_URL_POWERS = 'mongodb://localhost/heroes_powers'
 DATABASE_URL_LIST = 'mongodb://localhost/lists'
 
