Completed power display.

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 DATABASE_URL_HEROINFO = 'mongodb://localhost/heroes_info'
-DATABASE_URL_POWERS = 'mongodb://localhost/heroes_powers'
+DATABASE_URL_POW = 'mongodb://localhost/pow_info'
 DATABASE_URL_LIST = 'mongodb://localhost/lists'
 
