--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.5"
+    "mongoose": "^7.6.5",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
