--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ DATABASE_URL_HEROINFO = 'mongodb://localhost/heroes_info'
 DATABASE_URL_POW = 'mongodb://localhost/pow_info'
 DATABASE_URL_LIST = 'mongodb://localhost/lists'
 DATABASE_URL_AUTHY = 'mongodb://localhost/authy'
+DATABASE_URL_REVIEWS = 'mongodb://localhost/reviews'
